test/fail/ModuleLevelWerror.curry
{-# OPTIONS_FRONTEND -Werror #-}
module ModuleLevelWerror where

f = "No type signature"
